2005-05-19  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_PREREQ_GLOB): Check for __posix_getpwnam_r for Solaris.

2005-05-19  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_PREREQ_GLOB): Check for <unistd.h>.

2005-05-18  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Don't check for <gnu-versions.h> explicitly.
	(gl_PREREQ_GLOB): Check for <sys/cdefs.h>.

2005-05-17  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Prefer AC_COMPILE_IFELSE to AC_EGREP_CPP.
	(Suggested by Paul Eggert <eggert@cs.ucla.edu>.)

2005-05-15  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Don't call gl_PREREQ_GLOB.
	(gl_PREREQ_GLOB): Replace search for lots of headers by requiring
	AC_HEADER_DIRENT.  dirent64 is a type, not a function.

2005-05-12  Derek Price  <derek@ximbiot.com>

	* d-type.m4: New file from GNULIB.
	* glob.m4 (gl_GLOB): Remove indirection.  Check gnu-versions.h instead
	of looking for glob_pattern_p().  Use new d-type macro.
	(gl_PREREQ_GLOB): Reformat to remove blanks line in the generated
	configure script.

2005-05-11  Derek Price  <derek@ximbiot.com>

	* glob.m4: New file.
	* strdup.m4: New file from GNULIB.

2005-05-10  Derek Price  <derek@ximbiot.com>

	* getopt.m4, stat-macros.m4: Update from GNULIB.

2005-05-06  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update from GNULIB.  Closes cvshome.org issue #248.

2005-05-03  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* clock_time.m4, gnulib.m4, lstat.m4, mkstemp.m4, nanosleep.m4,
	stat-macros.m4: Updated.
	* unistd-safer.m4: New file.

2005-05-01  Mark D. Baushke  <mdb@cvshome.org>

	* mmap-anon.m4: Update from GNULIB.

2005-04-25  Derek Price  <derek@ximbiot.com>

	* getpass.m4, gettext.m4: Update from GNULIB.

2005-03-29  Mark D. Baushke  <mdb@cvshome.org>

	* getcwd-path-max.m4: Update from GNULIB.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* chdir-long.m4, closeout.m4, dirname.m4, exitfail.m4,
	fpending.m4, getcwd.m4, getdate.m4, getline.m4, getpagesize.m4,